# django-1-llunareine

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
nfactorial/: urls.py  views.py
